@@ -47,6 +47,7 @@ Next
     files in the same directory as your dosbox.conf or current working
     directory. Have fun. Note that this addition requires that you
     compile DOSBox-X with libpng enabled. (joncampbell123).
+  - Added dosbox.conf option to specify BIOS logo file. (joncampbell123).
 
 2024.12.04
   - Arrange memory device allocation so that it is possible to allocate
